# exercise-for-python-distilled

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: .pages  index.md
docs/ch01/: .pages  0100-word-frequency.md  0101-repeating-decimal.md  0101-total-scores.md  0102-dedupe.md  0102-inversion-count.md  0103-two-stack-queue.md  0104-text-entropy.md  0105-integer-sqrt.md  0150-repeating-decimal.md  0151-inversion-count.md  0152-two-stack-queue.md  0153-text-entropy.md  0154-integer-sqrt.md  index.md
docs/ch02/: .pages  0200-inventory-delta.md  0201-relational-algebra.md  0201-rotate-left.md  0202-even-squares.md  0202-transitive-closure.md  0203-sparse-polynomial.md  0204-riffle-shuffle.md  0205-inclusion-exclusion.md  0250-relational-algebra.md  0251-transitive-closure.md  0252-sparse-polynomial.md  0253-riffle-shuffle.md  0254-inclusion-exclusion.md  index.md
docs/ch03/: .pages  0300-first-duplicate.md  0301-backtracking-escape.md  0301-positive-ints.md  0302-recursive-descent-parser.md  0302-sum-until-stop.md  0303-transaction-context.md  0304-nfa-simulation.md  0305-binary-search-invariant.md  0350-backtracking-escape.md  0351-recursive-descent-parser.md  0352-transaction-context.md  0353-nfa-simulation.md  0354-binary-search-invariant.md  index.md
docs/ch04/: .pages  0400-point-protocol.md  0401-int-range.md  0401-modular-ring.md  0402-copy-board.md  0402-multiset-order.md  0403-cons-list.md  0404-lazy-attribute.md  0405-quaternion.md  0450-modular-ring.md  0451-multiset-order.md  0452-cons-list.md  0453-lazy-attribute.md  0454-quaternion.md  index.md
docs/ch05/: .pages  0500-accumulator-closure.md  0501-function-composition.md  0501-make-record.md  0502-count-calls.md  0502-memoize-dp.md  0503-fixed-point-combinator.md  0503-shared-default.md  0504-trampoline-cps.md  0505-auto-curry.md  0550-function-composition.md  0551-memoize-dp.md  0552-fixed-point-combinator.md  0553-trampoline-cps.md  0554-auto-curry.md  index.md
docs/ch06/: .pages  0600-running-totals.md  0601-chunked.md  0601-prime-stream.md  0602-flatten-once.md  0602-same-fringe.md  0603-online-variance.md  0603-running-average-coroutine.md  0604-hamming-numbers.md  0605-round-robin-scheduler.md  0650-prime-stream.md  0651-same-fringe.md  0652-online-variance.md  0653-hamming-numbers.md  0654-round-robin-scheduler.md  index.md
docs/ch07/: .pages  0700-bank-account.md  0701-bounded-counter.md  0701-c3-linearization.md  0702-history-stack.md  0702-unit-descriptor.md  0703-hash-consing.md  0704-weakref-cache.md  0705-monoid-abc.md  0706-slots-union-find.md  0750-c3-linearization.md  0751-unit-descriptor.md  0752-hash-consing.md  0753-weakref-cache.md  0754-monoid-abc.md  0755-slots-union-find.md  index.md
docs/ch08/: .pages  0800-exported-names.md  0801-mini-import-system.md  0801-module-filename.md  0802-belongs-to-package.md  0802-module-search-path.md  0803-relative-import.md  0804-reload-order.md  0805-star-import.md  0850-mini-import-system.md  0851-module-search-path.md  0852-relative-import.md  0853-reload-order.md  0854-star-import.md  index.md
docs/ch09/: .pages  0900-csv-amounts.md  0901-json-lines.md  index.md  (+12 more)
templates/: problem.md
tests/: _helpers.py
tools/: check_doctests.py
(+286 files in other folders)
